...
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/offerEnterNewOfferButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="New Job Offer"
                android:textSize="10sp" />
...
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Title" />

                <EditText
                    android:id="@+id/offerTitleValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>
...
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="Company" />

                <EditText
                    android:id="@+id/offerCompanyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>
...
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="Location State" />

                <EditText
                    android:id="@+id/offerLocation1Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>
...
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="Location City" />

                <EditText
                    android:id="@+id/offerLocation2Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>
...
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="Cost of Living" />

                <EditText
                    android:id="@+id/offerCostLivingValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number|numberDecimal" />
            </TableRow>
...
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="Yearly Salary" />

                <EditText
                    android:id="@+id/offerYearlySalaryValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number|numberDecimal" />
            </TableRow>
...
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="Yearly Bonus" />

                <EditText
                    android:id="@+id/offerYearlyBonusValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number|numberDecimal" />
            </TableRow>
...
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="Retirement Benefits" />

                <EditText
                    android:id="@+id/offerRetireBenefitValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number|numberDecimal" />
            </TableRow>
...
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="Relocation Stipend" />

                <EditText
                    android:id="@+id/offerRelocationStipendValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberSigned|numberDecimal" />
            </TableRow>
...
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="RSU Award" />

                <EditText
                    android:id="@+id/offerRSUAwardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberSigned|numberDecimal" />
            </TableRow>
...
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/offerBackButton"
                android:layout_width="155dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="Back" />

            <Button
                android:id="@+id/offerSaveOfferButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="20"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"
                android:text="Save" />
...
