...
                android:background="#CAC8C8"
                android:textSize="20sp" />
        </LinearLayout>


        <ListView
            android:id="@+id/jobList"
            android:layout_width="match_parent"
            android:layout_height="535dp"
            android:choiceMode="multipleChoice" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/compareExitButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="Back" />

            <Button
                android:id="@+id/compareNewComparisonButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="Compare" />
        </LinearLayout>
...
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/compareTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:visibility="gone">

...
